@@ -351,12 +351,6 @@ class TestArchives (ArchiveTest):
         self.archive_extract('t.cab.foo', check=None)
 
     @needs_program('file')
-    @needs_program('orange')
-    def test_orange (self):
-        self.program = 'orange'
-        self.archive_extract('t.cab.foo')
-
-    @needs_program('file')
     @needs_program('arj')
     def test_arj (self):
         self.program = 'arj'
