@@ -8,6 +8,7 @@
 * Added support for lcap handling CAB (.cab) archives.
 * Added support for shar handling SHAR (.shar) shell archives.
 * Added support for unadf handling ADF (.adf) amiga disk archives.
+* Removed support for orange handling self-extracting installers.
 * Generate standalone Windows .exe and Linux .rpm installer.
 * Initialize the internal MIME database correct on all platforms.
 * Improved option compatibility for the ar, cpio and tar programs.
